@startuml

title APPLICATIONS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class main <<ESP>>
{
    main()
}

class ApplicationsTask  
{
    Run()
}

main *- ApplicationsTask

package "Components Builder" as ComponentsBuilder
{
    class ComponentsBuilder
    {
        + <<abstract>> Build()
    }

    class EspComponentsBuilder
    {
        + Build()
    }
    EspComponentsBuilder -u-|> ComponentsBuilder

    class WindowsComponentsBuilder
    {
        + Build()
    }
    WindowsComponentsBuilder -u-|> ComponentsBuilder
}
main *-- EspComponentsBuilder

package "I/O States"
{
    class JoystickState 
    {
        - direction : EJoystickDirection
        - buttonState : bool
        + GetDirection() : EJoystickDirection
        + GetButtonState() : bool
    }
    
    class ButtonState 
    {
        - buttonState : bool
        + GetState() : bool
    }
    
    interface IoStateManager
    {
        + EJoystickId : { PLAYER_1, PLAYER_2 }
        + EButtonId : { SYSTEM }
        + GetJoystick(EJoystickId): EJoystickId
        + GetButton(EButtonId): EButtonId
    }

    IoStateManager *--"2" JoystickState : (Player 1, \n Player2)
    IoStateManager *-- ButtonState : (System Button)
}

package "Applications" 
{
    interface IApplication 
    {
        + {abstract} Start(EApplicationId)
        + {abstract} Pause(EapplicationId)
        + {abstract} Resume(EApplicationId)
        + {abstract} Stop(EApplicationId)
    }

    abstract class Application <<abstract>>
    {
        + GetApplicationsManager() : ApplicationsManager
        + EApplicationId { PONG, ... }
    }

    Application -u-|> IApplication

    class GameApplication <<abstract>> 
    {
    }

    class DemoApplication <<abstract>> 
    {
    }

    class ToolApplication <<abstract>>
    {
    }

    class UtilityApplication <<abstract>>
    {
    }

    MenuApplication     -u---|> Application
    GameApplication     -u-|> Application
    DemoApplication     -u-|> Application 
    ToolApplication     -u-|> Application
    UtilityApplication  -u-|> Application

    class Pong  {}
    Pong -u-|> GameApplication

    class ApplicationsManager
    {
        Run()
        GetApplicationsTask(): ApplicationsTask
        GetIoStateManager(): IoStateManager
    }

    ApplicationsTask *--- ApplicationsManager
    ApplicationsManager *-- "*" Application
    ApplicationsManager *--- IoStateManager

    package "Menu Application" as MenuApplication
    {
        class MenuApplication 
        {
        }

        class MenuRenderer 
        {
            + GetMenuApplication() : MenuApplication
            + Render(): RenderOutput
        }

        class RenderOutput
        {
            + GetMenuApplication() : MenuApplication
        }

        MenuRenderer *- RenderOutput
        
        class MenuInputProcessor 
        {
            + GetMenuApplication() : MenuApplication
        }

        MenuApplication *-- MenuRenderer
        MenuApplication *-- RenderOutput
        MenuApplication *-- MenuInputProcessor
    }        
}

@enduml
